bug 330030 only set mOutStream if the character encoding name is valid patch by Nickolay Ponomarev <asqueella@gmail.com> r=biesi sr=darin