intl/uconv/src/nsConverterOutputStream.cpp
@@ -50,10 +50,7 @@ NS_IMPL_ISUPPORTS2(nsConverterOutputStream,
 
 nsConverterOutputStream::~nsConverterOutputStream()
 {
-    if (mOutStream) {
-        Flush();
-        Close();
-    }
+    Close();
 }
 
 NS_IMETHODIMP
@@ -67,8 +64,6 @@ nsConverterOutputStream::Init(nsIOutputStream* aOutStream,
     if (!aCharset)
         aCharset = "UTF-8";
 
-    mOutStream = aOutStream;
-
     nsresult rv;
     nsCOMPtr<nsICharsetConverterManager> ccm =
         do_GetService(NS_CHARSETCONVERTERMANAGER_CONTRACTID, &rv);
@@ -77,6 +72,8 @@ nsConverterOutputStream::Init(nsIOutputStream* aOutStream,
     rv = ccm->GetUnicodeEncoder(aCharset, getter_AddRefs(mConverter));
     if (NS_FAILED(rv))
         return rv;
+
+    mOutStream = aOutStream;
 
     PRInt32 behaviour = aReplacementChar ? nsIUnicodeEncoder::kOnError_Replace
                                          : nsIUnicodeEncoder::kOnError_Signal;
